--- a/bootstrap-3.3.7-dist/css/custom.css
+++ b/bootstrap-3.3.7-dist/css/custom.css
@@ -1,4 +1,10 @@
+body {
+    background-color: #f5f5f5;
+}
 
+.container{
+	margin-top: 50px;
+}
 .row-inner1{
 	color: rgba(0,0,0,0.55);
 	background-color: #f6f6f6;
@@ -7,9 +13,22 @@
 	padding: 15px 16px;
 }
 .row-outer{
-	height: 284px;
+	min-height: 290px;
 	border: 1px solid rgba(0,0,0,0.1);
 }
-.row-inner2{
-	padding: 160px 32px 40px 32px !important;
+.col-md-12.row-inner2 {
+    position: absolute;
+    padding: 80px 20px 20px 40px;
+}
+.row-inner2 h1{
+	font-size: 20px;
+	padding-bottom: 4px;
+	font-family: 'OpenSans-Light', Arial, sans-serif;
+	font-weight: 100;
+	line-height: 24px;
+	color: #5b5656;
+}
+.icon2 img{
+	width: 22px;
+	height: 22px;
 }
