--- a/Webtechlec/css/custom.css
+++ b/Webtechlec/css/custom.css
@@ -22,7 +22,7 @@ body {
 	left: -4px;
 }
 .col-md-12 h1{
-	font-size: 20px;
+	font-size: 25px;
 	padding-bottom: 4px;
 	font-family: 'OpenSans-Light', Arial, sans-serif;
 	font-weight: 100;
@@ -37,4 +37,8 @@ body {
 	cursor: pointer; 
 	cursor: hand;
 	color: #2972d1;
+}
+.quiz img{
+	border: 1px solid #046677;
+	width: 100%;
 }
